Adding a type for reserved words to prep for some variable changes